Fix #1354